--- a/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJyYMQnifmzykhThICNDE4",
+      "mount_file_id": "12iJG3oD6KKJ-HyfG7-0oEkp3dGv-8RS1",
+      "authorship_tag": "ABX9TyOZ4DH066uSqRnqCzMTXwnQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,12 +40,107 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd"
+      ],
       "metadata": {
         "id": "Z7ruRrGK5J_W"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df=pd.read_csv('/content/drive/MyDrive/Table1.2.csv')"
+      ],
+      "metadata": {
+        "id": "mRLTfjuETIZQ"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df.head(10))"
+      ],
+      "metadata": {
+        "id": "v3QO1LCATKKg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7bb8d5c3-981f-4ca3-d184-45f83caf730f"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    Component   Mole fraction   Molecular Weight  Critical temperature  \\\n",
+            "0    Nitrogen          0.0138             28.013               126.200   \n",
+            "1      Methan          0.9302             16.043               190.560   \n",
+            "2      Ethane          0.0329             30.070               305.330   \n",
+            "3     Propane          0.0136             44.097               369.850   \n",
+            "4   Iso-Butan          0.0023             58.123                407.85   \n",
+            "5     N-Butan          0.0037             58.123                425.16   \n",
+            "6  Isopentane          0.0012             72.150                460.43   \n",
+            "7   N-pentane          0.0010             72.150                469.71   \n",
+            "8      Hexane          0.0008             86.177                507.37   \n",
+            "9   Heptane +          0.0005            114.231                     -   \n",
+            "\n",
+            "   Critical pressure  \n",
+            "0             34.000  \n",
+            "1             45.900  \n",
+            "2             48.700  \n",
+            "3             42.500  \n",
+            "4               36.4  \n",
+            "5               38.0  \n",
+            "6               33.8  \n",
+            "7               33.7  \n",
+            "8               30.1  \n",
+            "9                  -  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MC7plus= 114.2\n",
+        "GC7plus= 0.7070"
+      ],
+      "metadata": {
+        "id": "3NoGimxgTK-Q"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Темпервтура кипения\n",
+        "Tbplus=5/9 * ((4.5579*(MC7plus**0.15178)*(GC7plus**0.15427))**3)\n",
+        "print(\"Темпервтура кипения : \", Tbplus, \"K\")"
+      ],
+      "metadata": {
+        "id": "rUjNPSbdTOk4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5a00c6b1-dad0-4b4a-8d1b-9f120550e78b"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Темпервтура кипения :  387.4979017731816 K\n"
+          ]
+        }
+      ]
     }
   ]
 }
