Se creó con Colab

--- a/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "12iJG3oD6KKJ-HyfG7-0oEkp3dGv-8RS1",
-      "authorship_tag": "ABX9TyOZ4DH066uSqRnqCzMTXwnQ",
+      "authorship_tag": "ABX9TyOyHtL5n60dmzM9Bxjsub+p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,12 +41,13 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import numpy as np"
       ],
       "metadata": {
         "id": "Z7ruRrGK5J_W"
       },
-      "execution_count": 1,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -57,7 +58,7 @@
       "metadata": {
         "id": "mRLTfjuETIZQ"
       },
-      "execution_count": 3,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -70,9 +71,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7bb8d5c3-981f-4ca3-d184-45f83caf730f"
+        "outputId": "7cedb36b-7b69-4a33-e408-63b6920d4246"
       },
-      "execution_count": 4,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +115,7 @@
       "metadata": {
         "id": "3NoGimxgTK-Q"
       },
-      "execution_count": 5,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -129,9 +130,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5a00c6b1-dad0-4b4a-8d1b-9f120550e78b"
+        "outputId": "55ac48f5-61d0-4db6-98c8-8fea5088683e"
       },
-      "execution_count": 6,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,6 +142,48 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Псевдокритическое давление\n",
+        "Ppplus= 0.06895 * np.exp( 8.3634 -(0.0566/GC7plus) -\n",
+        "                        ((0.24244 + (2.2898/GC7plus) + (0.11857/GC7plus**2)) * (9*Tbplus/5000)) +\n",
+        "                        ((1.4685 + (3.648/GC7plus)+ (0.47227/GC7plus**2))* ((9*Tbplus/5)**2/(10**7))-\n",
+        "                        ((0.42019 + 1.6977/GC7plus**2)* ((9*Tbplus/5)**3/(10**10)))))\n",
+        "\n",
+        "print(Ppplus, \"bar или\", Ppplus*14.5, \"psia\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uvHUaAiLawuj",
+        "outputId": "57094e06-8ca0-41ae-a1f2-68421bf64a21"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25.90198225730165 bar или 375.57874273087396 psia\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Псевдокритическая температура\n",
+        "Tpcplus = 5/9 * ((341,7 + 811 * GC7plus) + ((0.4244 + 0.1174*GC7plus)*5/9) +\n",
+        "                 )"
+      ],
+      "metadata": {
+        "id": "6L0UJGF8bGku"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
