Se creó con Colab

--- a/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "12iJG3oD6KKJ-HyfG7-0oEkp3dGv-8RS1",
-      "authorship_tag": "ABX9TyOyHtL5n60dmzM9Bxjsub+p",
+      "authorship_tag": "ABX9TyMe8Wj2sm37aJJYR9TC5nx8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "Z7ruRrGK5J_W"
       },
-      "execution_count": 20,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "mRLTfjuETIZQ"
       },
-      "execution_count": 21,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -71,9 +71,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7cedb36b-7b69-4a33-e408-63b6920d4246"
+        "outputId": "553926d9-1c68-4952-c4b5-befc97e8375a"
       },
-      "execution_count": 22,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
       "metadata": {
         "id": "3NoGimxgTK-Q"
       },
-      "execution_count": 23,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -130,9 +130,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "55ac48f5-61d0-4db6-98c8-8fea5088683e"
+        "outputId": "76cd9e9c-f756-4841-e395-437c3202fc9d"
       },
-      "execution_count": 24,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,9 +159,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uvHUaAiLawuj",
-        "outputId": "57094e06-8ca0-41ae-a1f2-68421bf64a21"
+        "outputId": "f31403e6-b2a4-4da1-ffb0-d17973cbd1fd"
       },
-      "execution_count": 38,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,11 +176,35 @@
       "cell_type": "code",
       "source": [
         "#Псевдокритическая температура\n",
-        "Tpcplus = 5/9 * ((341,7 + 811 * GC7plus) + ((0.4244 + 0.1174*GC7plus)*5/9) +\n",
-        "                 )"
+        "Tpcplus = 5/9 * ((341.7 + 811 * GC7plus) + ((0.4244 + 0.1174*GC7plus)*(9*Tbplus/5)) +\n",
+        "                 ((0.4669 - 3.2623*GC7plus)*(10**5/(9*Tbplus/5))))\n",
+        "print(Tpcplus, \"K\")\n"
       ],
       "metadata": {
-        "id": "6L0UJGF8bGku"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6L0UJGF8bGku",
+        "outputId": "eac5abd5-6526-451d-deb4-3df9eb40e1bf"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "558.4734462140145 K\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Коэффициенты Fj, Ej и  Ek\n"
+      ],
+      "metadata": {
+        "id": "sclX54RUjqAq"
       },
       "execution_count": null,
       "outputs": []
