Se creó con Colab

--- a/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "12iJG3oD6KKJ-HyfG7-0oEkp3dGv-8RS1",
-      "authorship_tag": "ABX9TyMe8Wj2sm37aJJYR9TC5nx8",
+      "authorship_tag": "ABX9TyOLGLWOCQMMd0uvE8DJVLAp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,18 +47,18 @@
       "metadata": {
         "id": "Z7ruRrGK5J_W"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "df=pd.read_csv('/content/drive/MyDrive/Table1.2.csv')"
+        "Tabla=pd.read_csv('/content/drive/MyDrive/Table1.2.csv')"
       ],
       "metadata": {
         "id": "mRLTfjuETIZQ"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -71,9 +71,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "553926d9-1c68-4952-c4b5-befc97e8375a"
+        "outputId": "a672785d-7d17-4c09-8575-af869afb53e1"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
       "metadata": {
         "id": "3NoGimxgTK-Q"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,9 +130,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "76cd9e9c-f756-4841-e395-437c3202fc9d"
+        "outputId": "cec2bb3c-49fe-4589-96cc-b54055452528"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,9 +159,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uvHUaAiLawuj",
-        "outputId": "f31403e6-b2a4-4da1-ffb0-d17973cbd1fd"
+        "outputId": "53ef7860-519e-457e-90a3-a44164266b0e"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,9 +185,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6L0UJGF8bGku",
-        "outputId": "eac5abd5-6526-451d-deb4-3df9eb40e1bf"
+        "outputId": "59b2bc05-fcfd-46ff-b51b-ed58cef46c9d"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,13 +201,201 @@
     {
       "cell_type": "code",
       "source": [
-        "#Коэффициенты Fj, Ej и  Ek\n"
+        "print(Tabla.columns.values)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ok5HZe_apC0n",
+        "outputId": "4c4e5c89-c00e-4b10-f6b8-fac001a4d024"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Component' ' Mole fraction' ' Molecular Weight' ' Critical temperature'\n",
+            " ' Critical pressure']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#добавляем новые данные в таблицу\n",
+        "Tabla.at[9, ' Critical temperature'] = Tpcplus\n",
+        "Tabla.at[9, ' Critical pressure'] = Ppplus"
+      ],
+      "metadata": {
+        "id": "b0KjfQK8ilXq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(Tabla)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VJqHDWRtpM70",
+        "outputId": "5fea7868-bbed-49f9-9a0b-d89135bf9800"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    Component   Mole fraction   Molecular Weight  Critical temperature  \\\n",
+            "0    Nitrogen          0.0138             28.013               126.200   \n",
+            "1      Methan          0.9302             16.043               190.560   \n",
+            "2      Ethane          0.0329             30.070               305.330   \n",
+            "3     Propane          0.0136             44.097               369.850   \n",
+            "4   Iso-Butan          0.0023             58.123                407.85   \n",
+            "5     N-Butan          0.0037             58.123                425.16   \n",
+            "6  Isopentane          0.0012             72.150                460.43   \n",
+            "7   N-pentane          0.0010             72.150                469.71   \n",
+            "8      Hexane          0.0008             86.177                507.37   \n",
+            "9   Heptane +          0.0005            114.231            558.473446   \n",
+            "\n",
+            "   Critical pressure  \n",
+            "0             34.000  \n",
+            "1             45.900  \n",
+            "2             48.700  \n",
+            "3             42.500  \n",
+            "4               36.4  \n",
+            "5               38.0  \n",
+            "6               33.8  \n",
+            "7               33.7  \n",
+            "8               30.1  \n",
+            "9          25.901982  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Obtener el valor de la celda específica usando .loc\n",
+        "#Tabla= pd.DataFrame(df)\n",
+        "#print(Tabla)\n"
+      ],
+      "metadata": {
+        "id": "voQ3vtKmOL9b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "valor_iloc = Tabla.iloc[3, 2]\n",
+        "print(valor_iloc)"
+      ],
+      "metadata": {
+        "id": "jFT6qOe8O23T",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "faedc2db-b2eb-4b0d-dc46-615146e839f6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "44.097\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Коэффициенты Fj, Ej и  Ek\n",
+        "#def SuttonCorrection(Mf, Tc, Pc):\n",
+        "#    import numpy as np\n",
+        "    #Mf Mole fraction #Tc Critical Temperature #Pc Critical Pressure\n",
+        "#    Fj= 0.0414*(Mf*Tc/Pc) + 0.0827*(Mf**2*Tc/Pc)\n",
+        "#    return(Fj)\n",
+        "\n"
       ],
       "metadata": {
         "id": "sclX54RUjqAq"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Коэффициенты Fj, Ej и  Ek\n",
+        "Mfplus=Tabla.iloc[9, 1] #[Row, Column]\n",
+        "Tcplus= Tabla.iloc[9, 3]\n",
+        "Pcplus=Tabla.iloc[9, 4]\n",
+        "#print(Mfplus, Tcplus, Pcplus)\n"
+      ],
+      "metadata": {
+        "id": "knZ5_AjIdC21",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "acc33946-3bb1-4d1a-8710-116b8e0707dc"
+      },
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.0005 558.4734462140145 25.90198225730165\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Fj= 0.0414*(Mf*Tc/Pc) + 0.0827*(Mf**2*Tc/Pc)\n",
+        "Ej =0.6081*Fj + 1.1325*Fj**2 - 14.004*Fj*Mfplus + 64.434*Fj*Mfplus**2\n",
+        "Ek= 0.47265*(Tcplus/np.sqrt(Pcplus))*(0.3129*Mfplus - 4.8156*Mfplus**2 + 27.3751*Mfplus**3)"
+      ],
+      "metadata": {
+        "id": "iQr5_iS6uKQ3"
+      },
+      "execution_count": 129,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Fj :\", Fj, \"Ej: \", Ej, \"Ek :\",  Ek)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xgcx_asarJR9",
+        "outputId": "03e937d1-1dbd-4bd5-8ae6-470b72065f32"
+      },
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fj : 0.00044675911905809815 Ej:  0.0002687792494439518 Ek : 0.008052040698587972\n"
+          ]
+        }
+      ]
     }
   ]
 }
