Se creó con Colab

--- a/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "12iJG3oD6KKJ-HyfG7-0oEkp3dGv-8RS1",
-      "authorship_tag": "ABX9TyOLGLWOCQMMd0uvE8DJVLAp",
+      "authorship_tag": "ABX9TyOApZTGmszrbQBt6IR0UxTq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
     {
       "cell_type": "code",
       "source": [
-        "Tabla=pd.read_csv('/content/drive/MyDrive/Table1.2.csv')"
+        "df=pd.read_csv('/content/drive/MyDrive/Table1.2.csv')"
       ],
       "metadata": {
         "id": "mRLTfjuETIZQ"
@@ -71,7 +71,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a672785d-7d17-4c09-8575-af869afb53e1"
+        "outputId": "674408d4-8248-4ead-ae5c-0704ca4527b4"
       },
       "execution_count": null,
       "outputs": [
@@ -109,6 +109,45 @@
     {
       "cell_type": "code",
       "source": [
+        "Tabla=pd.DataFrame(df)"
+      ],
+      "metadata": {
+        "id": "HEwEg3FF5d1o"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(Tabla.dtypes)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZYD5Sqdi8gtJ",
+        "outputId": "afe6ca4c-8136-4f94-fec8-7d48d6e9157c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Component                 object\n",
+            " Mole fraction           float64\n",
+            " Molecular Weight        float64\n",
+            " Critical temperature     object\n",
+            " Critical pressure        object\n",
+            "dtype: object\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "MC7plus= 114.2\n",
         "GC7plus= 0.7070"
       ],
@@ -130,7 +169,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cec2bb3c-49fe-4589-96cc-b54055452528"
+        "outputId": "1d42e532-9f8c-4841-d92d-e7319562f6bb"
       },
       "execution_count": null,
       "outputs": [
@@ -159,7 +198,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uvHUaAiLawuj",
-        "outputId": "53ef7860-519e-457e-90a3-a44164266b0e"
+        "outputId": "9025a888-08cb-400b-b618-821224e667c0"
       },
       "execution_count": null,
       "outputs": [
@@ -185,7 +224,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6L0UJGF8bGku",
-        "outputId": "59b2bc05-fcfd-46ff-b51b-ed58cef46c9d"
+        "outputId": "d4787bc9-0d50-4291-ee70-869414ff6a21"
       },
       "execution_count": null,
       "outputs": [
@@ -208,7 +247,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ok5HZe_apC0n",
-        "outputId": "4c4e5c89-c00e-4b10-f6b8-fac001a4d024"
+        "outputId": "96e7bebf-a318-41b1-e68e-46a5380dd643"
       },
       "execution_count": null,
       "outputs": [
@@ -245,7 +284,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VJqHDWRtpM70",
-        "outputId": "5fea7868-bbed-49f9-9a0b-d89135bf9800"
+        "outputId": "8b69ed20-2a27-410c-d8c1-273b9fbc56b0"
       },
       "execution_count": null,
       "outputs": [
@@ -283,6 +322,46 @@
     {
       "cell_type": "code",
       "source": [
+        "Tabla[' Critical temperature'] = pd.to_numeric(df[' Critical temperature'], errors='coerce')\n",
+        "Tabla[' Critical pressure'] = pd.to_numeric(df[' Critical pressure'], errors='coerce')"
+      ],
+      "metadata": {
+        "id": "Of5TKhN09xYv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(Tabla.dtypes)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CFkWWI0n9__J",
+        "outputId": "9c7e6ec6-4d21-4f7b-d5df-688efb5b5bda"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Component                 object\n",
+            " Mole fraction           float64\n",
+            " Molecular Weight        float64\n",
+            " Critical temperature    float64\n",
+            " Critical pressure       float64\n",
+            "dtype: object\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Obtener el valor de la celda específica usando .loc\n",
         "#Tabla= pd.DataFrame(df)\n",
         "#print(Tabla)\n"
@@ -304,7 +383,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "faedc2db-b2eb-4b0d-dc46-615146e839f6"
+        "outputId": "1308c5d8-0cab-4e81-e812-284be27e0587"
       },
       "execution_count": null,
       "outputs": [
@@ -346,7 +425,7 @@
       "metadata": {
         "id": "knZ5_AjIdC21"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -359,7 +438,7 @@
       "metadata": {
         "id": "iQr5_iS6uKQ3"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -372,9 +451,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xgcx_asarJR9",
-        "outputId": "03e937d1-1dbd-4bd5-8ae6-470b72065f32"
+        "outputId": "b54e0b63-394f-4faa-f292-d606015f4162"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,6 +463,74 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Parameters J and K\n",
+        "Tabla['Part1']= (Tabla[' Mole fraction'] * Tabla[' Critical temperature']/Tabla[' Critical pressure'])\n",
+        "Tabla['Part2'] = (Tabla[' Mole fraction']* np.sqrt(Tabla[' Critical temperature']/Tabla[' Critical pressure']))\n",
+        "Tabla['Part3']= (Tabla[' Mole fraction']* Tabla[' Critical temperature']/ np.sqrt(Tabla[' Critical pressure']))"
+      ],
+      "metadata": {
+        "id": "jSvXFTH80JiW"
+      },
+      "execution_count": 179,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(Tabla)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i0V5i_zsDGy0",
+        "outputId": "3c422cb6-e6db-4435-fb30-1472b3585595"
+      },
+      "execution_count": 180,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    Component   Mole fraction   Molecular Weight   Critical temperature  \\\n",
+            "0    Nitrogen          0.0138             28.013             126.200000   \n",
+            "1      Methan          0.9302             16.043             190.560000   \n",
+            "2      Ethane          0.0329             30.070             305.330000   \n",
+            "3     Propane          0.0136             44.097             369.850000   \n",
+            "4   Iso-Butan          0.0023             58.123             407.850000   \n",
+            "5     N-Butan          0.0037             58.123             425.160000   \n",
+            "6  Isopentane          0.0012             72.150             460.430000   \n",
+            "7   N-pentane          0.0010             72.150             469.710000   \n",
+            "8      Hexane          0.0008             86.177             507.370000   \n",
+            "9   Heptane +          0.0005            114.231             558.473446   \n",
+            "\n",
+            "    Critical pressure     Part1     Part2      Part3  \n",
+            "0           34.000000  0.051222  0.026587   0.298675  \n",
+            "1           45.900000  3.861850  1.895334  26.163855  \n",
+            "2           48.700000  0.206270  0.082379   1.439464  \n",
+            "3           42.500000  0.118352  0.040120   0.771561  \n",
+            "4           36.400000  0.025771  0.007699   0.155481  \n",
+            "5           38.000000  0.041397  0.012376   0.255189  \n",
+            "6           33.800000  0.016347  0.004429   0.095036  \n",
+            "7           33.700000  0.013938  0.003733   0.080912  \n",
+            "8           30.100000  0.013485  0.003284   0.073983  \n",
+            "9           25.901982  0.010781  0.002322   0.054866  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ebwt0jAMDIR8"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
