Se creó con Colab

--- a/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "12iJG3oD6KKJ-HyfG7-0oEkp3dGv-8RS1",
-      "authorship_tag": "ABX9TyOApZTGmszrbQBt6IR0UxTq",
+      "authorship_tag": "ABX9TyP2hc64NXRJjxJ2bgf/kGD/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "Z7ruRrGK5J_W"
       },
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "mRLTfjuETIZQ"
       },
-      "execution_count": null,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -71,9 +71,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "674408d4-8248-4ead-ae5c-0704ca4527b4"
+        "outputId": "536e8fd9-6c43-4a88-9cb2-ab0be016b398"
       },
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
       "metadata": {
         "id": "HEwEg3FF5d1o"
       },
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -127,9 +127,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZYD5Sqdi8gtJ",
-        "outputId": "afe6ca4c-8136-4f94-fec8-7d48d6e9157c"
+        "outputId": "03dd040f-2619-4208-ad3f-aace6a514b41"
       },
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +154,7 @@
       "metadata": {
         "id": "3NoGimxgTK-Q"
       },
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -169,9 +169,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1d42e532-9f8c-4841-d92d-e7319562f6bb"
+        "outputId": "06ab22da-bb92-438e-e6c2-f7e5798c167e"
       },
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,9 +198,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uvHUaAiLawuj",
-        "outputId": "9025a888-08cb-400b-b618-821224e667c0"
+        "outputId": "376cb9b5-9bbb-4ab1-8fc1-56b768420656"
       },
-      "execution_count": null,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,9 +224,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6L0UJGF8bGku",
-        "outputId": "d4787bc9-0d50-4291-ee70-869414ff6a21"
+        "outputId": "e8cd488a-042a-4970-8a40-04fb130bf418"
       },
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,9 +247,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ok5HZe_apC0n",
-        "outputId": "96e7bebf-a318-41b1-e68e-46a5380dd643"
+        "outputId": "a1b8a7a0-f88f-48ad-85a5-0caac8347dfd"
       },
-      "execution_count": null,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,7 +271,7 @@
       "metadata": {
         "id": "b0KjfQK8ilXq"
       },
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -284,9 +284,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VJqHDWRtpM70",
-        "outputId": "8b69ed20-2a27-410c-d8c1-273b9fbc56b0"
+        "outputId": "7025b340-a720-41c7-de65-f42c73595b09"
       },
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
@@ -328,7 +328,7 @@
       "metadata": {
         "id": "Of5TKhN09xYv"
       },
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -341,9 +341,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CFkWWI0n9__J",
-        "outputId": "9c7e6ec6-4d21-4f7b-d5df-688efb5b5bda"
+        "outputId": "978c33aa-dd2e-42c3-fdd3-89a058e2e60d"
       },
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,13 +369,13 @@
       "metadata": {
         "id": "voQ3vtKmOL9b"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "valor_iloc = Tabla.iloc[3, 2]\n",
+        "valor_iloc = Tabla.iloc[9, 4]\n",
         "print(valor_iloc)"
       ],
       "metadata": {
@@ -383,15 +383,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1308c5d8-0cab-4e81-e812-284be27e0587"
+        "outputId": "519c822a-4623-4d8c-d0dc-9b2bdd5f5389"
       },
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "44.097\n"
+            "25.90198225730165\n"
           ]
         }
       ]
@@ -410,35 +410,47 @@
       "metadata": {
         "id": "sclX54RUjqAq"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "#Коэффициенты Fj, Ej и  Ek\n",
-        "Mfplus=Tabla.iloc[9, 1] #[Row, Column]\n",
+        "Mfplus= Tabla.iloc[9, 1] #[Row, Column]\n",
         "Tcplus= Tabla.iloc[9, 3]\n",
-        "Pcplus=Tabla.iloc[9, 4]\n",
-        "#print(Mfplus, Tcplus, Pcplus)\n"
+        "Pcplus= Tabla.iloc[9, 4]\n",
+        "print(Mfplus, Tcplus, Pcplus)\n"
       ],
       "metadata": {
-        "id": "knZ5_AjIdC21"
+        "id": "knZ5_AjIdC21",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b161aba5-f60c-4d86-bb5f-a6a71a5ac768"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.0005 558.4734462140145 25.90198225730165\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "Fj= 0.0414*(Mf*Tc/Pc) + 0.0827*(Mf**2*Tc/Pc)\n",
+        "Fj= 0.0414*(Mfplus*Tcplus/Pcplus) + 0.0827*(Mfplus**2*Tcplus/Pcplus)\n",
         "Ej =0.6081*Fj + 1.1325*Fj**2 - 14.004*Fj*Mfplus + 64.434*Fj*Mfplus**2\n",
         "Ek= 0.47265*(Tcplus/np.sqrt(Pcplus))*(0.3129*Mfplus - 4.8156*Mfplus**2 + 27.3751*Mfplus**3)"
       ],
       "metadata": {
         "id": "iQr5_iS6uKQ3"
       },
-      "execution_count": null,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -451,9 +463,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xgcx_asarJR9",
-        "outputId": "b54e0b63-394f-4faa-f292-d606015f4162"
+        "outputId": "f027eba1-d319-4738-a025-a1debe290d79"
       },
-      "execution_count": null,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +487,7 @@
       "metadata": {
         "id": "jSvXFTH80JiW"
       },
-      "execution_count": 179,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -487,10 +499,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "i0V5i_zsDGy0",
-        "outputId": "3c422cb6-e6db-4435-fb30-1472b3585595"
+        "id": "EOp21MAuLXTv",
+        "outputId": "d14798d7-b292-484a-a432-2b1ce1ea9102"
       },
-      "execution_count": 180,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,12 +537,197 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Parameters J and K\n",
+        "J= 0.0414* (Tabla['Part1'].sum()) + 0.0827* (Tabla['Part2'].sum())**2\n",
+        "K= 0.47265* (Tabla['Part3'].sum())"
+      ],
       "metadata": {
         "id": "ebwt0jAMDIR8"
       },
-      "execution_count": null,
+      "execution_count": 84,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(J,K)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pyeK_kcPD244",
+        "outputId": "eddbe812-0263-4e6a-ddbf-eeaa43d85062"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.537675846323318 13.890721617077306\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#J и K corrected\n",
+        "Jcorr= J- Ej\n",
+        "Kcorr= K - Ek"
+      ],
+      "metadata": {
+        "id": "PBqSMUqgh2DR"
+      },
+      "execution_count": 86,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Псевдокритические T и P\n",
+        "Tpc= Kcorr**2/Jcorr\n",
+        "Ppc= Tpc/Jcorr"
+      ],
+      "metadata": {
+        "id": "a7pzjV5YiWv5"
+      },
+      "execution_count": 92,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Pseudocritical Temperature', Tpc, 'R')\n",
+        "print('Pseudocritical Pressure', Ppc, 'psia')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d1t9_jm5kSrh",
+        "outputId": "728cb6c6-9a17-418f-ce47-727555ab14de"
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pseudocritical Temperature 358.6266842680318 R\n",
+            "Pseudocritical Pressure 667.3278158039808 psia\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#apparent molecular weight - кажущаяся молекулярная вес\n",
+        "Tabla['Apparent MW']= Tabla[' Mole fraction'] * Tabla[' Molecular Weight']"
+      ],
+      "metadata": {
+        "id": "46TygPgqkji1"
+      },
+      "execution_count": 98,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(Tabla)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sgP9YhTcpeoa",
+        "outputId": "4a7e659a-cd06-4e0a-c0d4-ab02e0ff72b7"
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    Component   Mole fraction   Molecular Weight   Critical temperature  \\\n",
+            "0    Nitrogen          0.0138             28.013             126.200000   \n",
+            "1      Methan          0.9302             16.043             190.560000   \n",
+            "2      Ethane          0.0329             30.070             305.330000   \n",
+            "3     Propane          0.0136             44.097             369.850000   \n",
+            "4   Iso-Butan          0.0023             58.123             407.850000   \n",
+            "5     N-Butan          0.0037             58.123             425.160000   \n",
+            "6  Isopentane          0.0012             72.150             460.430000   \n",
+            "7   N-pentane          0.0010             72.150             469.710000   \n",
+            "8      Hexane          0.0008             86.177             507.370000   \n",
+            "9   Heptane +          0.0005            114.231             558.473446   \n",
+            "\n",
+            "    Critical pressure     Part1     Part2      Part3  Apparent MW  \n",
+            "0           34.000000  0.051222  0.026587   0.298675     0.386579  \n",
+            "1           45.900000  3.861850  1.895334  26.163855    14.923199  \n",
+            "2           48.700000  0.206270  0.082379   1.439464     0.989303  \n",
+            "3           42.500000  0.118352  0.040120   0.771561     0.599719  \n",
+            "4           36.400000  0.025771  0.007699   0.155481     0.133683  \n",
+            "5           38.000000  0.041397  0.012376   0.255189     0.215055  \n",
+            "6           33.800000  0.016347  0.004429   0.095036     0.086580  \n",
+            "7           33.700000  0.013938  0.003733   0.080912     0.072150  \n",
+            "8           30.100000  0.013485  0.003284   0.073983     0.068942  \n",
+            "9           25.901982  0.010781  0.002322   0.054866     0.057115  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Apparent molecular weight Gas\n",
+        "M=Tabla['Apparent MW'].sum()\n",
+        "print(M, 'lbm/lbm-mol либо г/моль')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9WyFDQ6xpf4I",
+        "outputId": "fe1082e1-bca9-48c7-97fc-8ca35d8e3b68"
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "17.532325299999997 lbm/lbm-mol либо г/моль\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Specific gravity - Удельная плотность газовой смеси\n",
+        "SGm = M/28.96\n",
+        "print(SGm)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hxn5WiFpqHIi",
+        "outputId": "bbd00a81-046f-43d9-e82b-8c75f7404931"
+      },
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.6053979730662982\n"
+          ]
+        }
+      ]
     }
   ]
 }
